--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^5.2.10",
     "@angular/cdk": "^5.1.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
