--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-froala-wysiwyg": "^2.8.3",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.7",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
