--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "6.0.8",
+    "@angular-devkit/build-angular": "^0.10.4",
+    "@angular/cli": "^6.2.6",
     "@angular/compiler-cli": "6.0.6",
     "@angular/language-service": "6.0.6",
     "@types/jasmine": "~2.5.53",
@@ -43,13 +43,13 @@
     "codelyzer": "^4.4.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "^2.0.4",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.3.2",
+    "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "2.7.2"
