--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "e2e": "ng e2e"
   },
   "postinstall": "ng build --aot -prod",
   "private": true,
@@ -31,7 +31,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
-    "zone.js": "^0.8.26",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.4",
