--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "e2e": "ng e2e"
   },
   "postinstall": "ng build --aot -prod",
+  "engines": {
+    "node": "11.0.0",
+    "npm": "6.4.1"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.6",
     "@angular/cdk": "^6.3.0",
+    "@angular/cli": "^7.0.5",
     "@angular/common": "6.0.6",
     "@angular/compiler": "6.0.6",
+    "@angular/compiler-cli": "^6.0.6",
     "@angular/core": "6.0.6",
     "@angular/forms": "6.0.6",
     "@angular/http": "6.0.6",
@@ -28,20 +34,24 @@
     "angular-froala-wysiwyg": "^2.8.3",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.7",
+    "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "path": "^0.12.7",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "typescript": "2.7.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.4",
-    "@angular/cli": "^6.2.6",
-    "@angular/compiler-cli": "6.0.6",
+    "@angular/cli": "^7.0.5",
+    "@angular/compiler-cli": "^6.0.6",
     "@angular/language-service": "6.0.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.113",
     "codelyzer": "^4.4.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "^3.1.1",
