--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
-  "postinstall": "ng build --aot -prod",
   "engines": {
     "node": "11.0.0",
     "npm": "6.4.1"
