--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "postinstall": "ng build --aot --prod"
   },
   "engines": {
     "node": "11.0.0",
@@ -43,7 +43,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.4",
+    "@angular-devkit/build-angular": "^0.10.5",
     "@angular/cli": "^7.0.5",
     "@angular/compiler-cli": "^6.0.6",
     "@angular/language-service": "6.0.6",
