--- a/package.json
+++ b/package.json
@@ -44,8 +44,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.5",
-    "@angular/cli": "^7.0.5",
-    "@angular/compiler-cli": "^6.0.6",
     "@angular/language-service": "6.0.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -62,7 +60,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "2.7.2"
+    "tslint": "~5.7.0"
   }
 }
