--- a/package.json
+++ b/package.json
@@ -17,16 +17,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.6",
-    "@angular/cdk": "^6.3.0",
-    "@angular/cli": "^7.0.5",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "6.0.6",
     "@angular/compiler": "6.0.6",
-    "@angular/compiler-cli": "^6.0.6",
+    "@angular/compiler-cli": "^6.1.10",
     "@angular/core": "6.0.6",
     "@angular/forms": "6.0.6",
     "@angular/http": "6.0.6",
-    "@angular/material": "^6.3.0",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "6.0.6",
     "@angular/platform-browser-dynamic": "6.0.6",
     "@angular/router": "6.0.6",
@@ -34,19 +33,20 @@
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "path": "^0.12.7",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "typescript": "2.7.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.5",
+    "@angular/cli": "^7.0.5",
     "@angular/language-service": "6.0.6",
     "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.113",
-    "codelyzer": "^4.4.0",
-    "enhanced-resolve": "^3.3.0",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.14.1",
+    "codelyzer": "^4.5.0",
+    "enhanced-resolve": "^3.4.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "^3.1.1",
